rename npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@itgold/tips",
+  "name": "@itgold/everscale-tip",
   "version": "1.0.0",
   "description": "Secure Smart Contract library for Solidity",
   "files": [
