fix typo packege.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itgold/everscale-tip",
-  "version": "1.0.0",
+  "version": "0.8.0",
   "description": "Secure Smart Contract library for Solidity",
   "files": [
     "/contracts/**"
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/itgoldio/everscale-tip4.git"
   },
-  "author": "Itgold <https://itgold.io/>",
+  "author": "ITgold <https://itgold.io/>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/itgoldio/everscale-tip4/issues"
@@ -21,6 +21,7 @@
     "smart",
     "contracts",
     "security",
-    "Itgold"
+    "nft",
+    "ITgold"
   ]
 }
