--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "files": [
     "/contracts/**"
   ],
+  "scripts": {
+    "test": "cd test && npx locklift test --network rfld"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/itgoldio/everscale-tip4.git"
@@ -23,5 +26,16 @@
     "security",
     "nft",
     "ITgold"
-  ]
+  ],
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.6",
+    "chai": "^4.3.6",
+    "everscale-standalone-client": "^2.0.27",
+    "locklift": "^2.1.10",
+    "prettier": "^2.7.1",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.7.4"
+  }
 }
