--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,8 +19,9 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        node: [ 14, 16, 18 ]
+        node: [ 16, 18 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
