--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "/contracts/**"
   ],
   "scripts": {
-    "test": "cd test && npx locklift test --network rfld"
+    "test": "cd test && npx locklift test -n local"
   },
   "repository": {
     "type": "git",
@@ -28,13 +28,13 @@
     "ITgold"
   ],
   "devDependencies": {
-    "@types/chai": "^4.3.3",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.7.6",
-    "chai": "^4.3.6",
-    "everscale-standalone-client": "^2.0.27",
-    "locklift": "^2.1.10",
-    "prettier": "^2.7.1",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.11",
+    "chai": "^4.3.7",
+    "everscale-standalone-client": "^2.1.18",
+    "locklift": "^2.5.5",
+    "prettier": "^2.8.7",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.7.4"
   }
